<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ui.main.MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonReverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reverse"
        android:layout_marginTop="@dimen/main_xs"
        android:layout_marginStart="@dimen/main_xs"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSearch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLatitude"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/latlong_field"
        android:layout_height="wrap_content"
        android:hint="@string/latitude_hint"
        android:layout_marginStart="@dimen/main_xs"
        app:layout_constraintStart_toEndOf="@id/buttonReverse"
        app:layout_constraintBottom_toBottomOf="@id/buttonReverse"
        app:layout_constraintEnd_toStartOf="@+id/textFieldLongitude">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLatitude"
            android:imeOptions="actionSearch"
            android:inputType="numberSigned|numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldLongitude"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/latlong_field"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_xs"
        android:hint="@string/longitude_hint"
        app:layout_constraintStart_toEndOf="@id/textFieldLatitude"
        app:layout_constraintBottom_toBottomOf="@id/buttonReverse" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLongitude"
            android:imeOptions="actionSearch"
            android:inputType="numberSigned|numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldAutoSuggest"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/main_xs"
        android:layout_marginRight="@dimen/main_xs"
        android:hint="@string/autosuggest_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputString"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_search"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="@id/textFieldAutoSuggest"
        app:layout_constraintTop_toBottomOf="@id/textFieldAutoSuggest" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonReverse"
        />

</androidx.constraintlayout.widget.ConstraintLayout>